fix(code-conversion): preserve process instance query filters
Refs #2933

Signed-off-by: Peter Bojtos <peter.bojtos@camunda.com>
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>